# faker-app

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHEATSHEET.md  CLAUDE.md  CONVERSATION_SUMMARY.md  GEMINI.md  MIGRATION.md  PLAN.md  README.md  REFACTOR.md  docker-compose.yml  session-ses_168e.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: database.py  migrations.py  validation.py
backend/app/routers/: aggregation.py  datasets.py  exports.py  financial.py  generation.py  health.py  iso20022.py  kaggle.py  templates.py
backend/app/schemas/: aggregation.py  financial.py  generation.py  iso20022.py  kaggle.py  template.py
backend/app/services/: dataset_service.py  export_service.py  financial_service.py  generation_engine.py  iso20022_service.py  kaggle_service.py  template_library.py  transform_service.py
backend/app/templates/: camt.054.001.12_-_banktocustomerdebitcreditnotification.xml  company.xml  ecommerce_order.xml  employee.xml  financial_transaction.xml  iot_sensor_event.xml  pacs.008.001.12_-_fitoficustomercredittransfer.xml  patient_record.xml  person.xml  product_catalog.xml  real_estate_listing.xml  support_ticket.xml  web_event_log.xml
backend/cli/: common.py  datasets.py  financial.py  generate.py  iso20022.py  kaggle.py  main.py  templates.py  transform.py  tui.py
backend/tests/: conftest.py  test_api.py  test_export.py  test_financial.py  test_generation.py  test_health.py  test_templates.py  test_transform.py  test_validation.py
backend/tui/: app.py  app.tcss
(+48 files in other folders)
